--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -167,8 +167,7 @@
                 <div class="silex-element-content normal">
                     /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
                 </div>
-            </div><div data-silex-type="image-element" class="editable-style image-element silex-id-1483131239727-16" style="">
-                <img src="{{ site.url }}{{ site.baseurl }}/assets/pic08.jpg" class=""></div><div data-silex-type="text-element" class="editable-style text-element product-details silex-id-1436036523626-21">
+            </div><div data-silex-type="image-element" class="editable-style image-element silex-id-1483131239727-16" style="">{{mediumplaatje}}</div><div data-silex-type="text-element" class="editable-style text-element product-details silex-id-1436036523626-21">
                 <div class="silex-element-content normal">
                     <h1>Project Name</h1>
                     
